--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;500;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles.css">
   <!-- canonical（検索用） -->
-  <link rel="canonical" href="https://notomiya0222-spec.github.io/portfolio/">
+  <link rel="canonical" href="https://notomiya.github.io/portfolio/">
 
   <!-- OGP -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Sakuraba Usa - Portfolio">
   <meta property="og:title" content="Sakuraba Usa - Portfolio">
   <meta property="og:description" content="かわいいを求める全ての人に、作品を届けたい。">
-  <meta property="og:url" content="https://notomiya0222-spec.github.io/portfolio/">
-  <meta property="og:image" content="https://notomiya0222-spec.github.io/portfolio/images/OGP.png?v=2">
-  <meta property="og:image:secure_url" content="https://notomiya0222-spec.github.io/portfolio/images/OGP.png?v=2">
+  <meta property="og:url" content="https://notomiya.github.io/portfolio/">
+  <meta property="og:image" content="https://notomiya.github.io/portfolio/images/OGP.png">
+  <meta property="og:image:secure_url" content="https://notomiya.github.io/portfolio/images/OGP.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:locale" content="ja_JP">
@@ -28,7 +28,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Sakuraba Usa - Portfolio">
   <meta name="twitter:description" content="かわいいを求める全ての人に、作品を届けたい。">
-  <meta name="twitter:image" content="https://notomiya0222-spec.github.io/portfolio/images/OGP.png?v=2">
+  <meta name="twitter:image" content="https://notomiya.github.io/portfolio/images/OGP.png">
 </head>
 <body>
   <header class="site-header">
